--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "hostnow-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/app.js",
   "scripts": {
     "start": "node .",
     "start:dev": "npx nodemon",
-    "migrate-db": "npx prisma migrate dev",
+    "migrate:dev": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prisma": {
